Fix: catenaXSideId wrong mocking data, css class error that leads to wrong sizeing on the dashboard, disappearing table when filtered for something with no match,

--- a/frontend/src/app/modules/shared/components/parts-table/parts-table.component.scss
+++ b/frontend/src/app/modules/shared/components/parts-table/parts-table.component.scss
@@ -96,7 +96,7 @@
   justify-content: center;
 
   &__icon {
-    transform: scale(2);
+    transform: scale(1);
   }
 }
 
